# vacuum-energy-calculator

./: CITATION.cff  LICENSE  README.markdown  README.md  pyproject.toml  requirements.txt  vacuum_energy.py
examples/: vacuum_density_scan.py
tests/: test_core.py
vacuumpy/: __init__.py  core.py
