[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuumpy"
version = "0.1.0"
description = "Pedagogical toolkit for UV-regularized vacuum energy and Casimir pressure calculations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juan Galaz Amengual" }]
keywords = ["physics", "qft", "casimir", "vacuum-energy", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "matplotlib>=3.7", "ruff"]

[project.urls]
Repository = "https://github.com/CienciaEstelar/vacuumpy"

[tool.setuptools.packages.find]
where = ["."]
include = ["vacuumpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
